<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to ETA</string>
    <string name="action_create_trip">Create Trip</string>
    <string name="start_upload">StartUploading</string>
    <string name="stop_upload">StopUploading</string>
    <string name="upload_location_control">Upload Location Control</string>
    <string name="upload_on">Now uploading periodically !</string>
    <string name="upload_off">Now no uploading happens !</string>
    
    <string name="view_triplist_button">View TripList</string>
    
    <string name="title_activity_create_trip">CreateTripActivity</string>
    <string name="new_trip_page">New Trip</string>
    <string name="input_trip_name">Input a trip name</string>
    <string name="input_trip_content">Input the trip content</string>
    <string name="input_trip_destination">Input destination(click to goto GoogleMap)</string>
    <string name="add_contact">Invite</string>
    
    <string name="submit_trip">submit and view trip</string>
    <string name="title_activity_view_trip">ViewTripActivity</string>
    <string name="view_trip_page">T</string>
    
    <string name="title_activity_submit_and_view">SubmitAndViewActivity</string>
    <string name="new_trip_infor">NEW CREATED TRIP:</string>
    <string name="confirm">Confirm</string>
    
    <string name="title_activity_view_trip_list">ViewTripListActivity</string>
    <string name="hello_world">to be designed later</string>
    
    <string name="view_trip_name">TRIP NAME:</string>
    <string name="view_trip_destination">DESTINATION:</string>
    <string name="view_trip_content">CONTENT:</string>
    <string name="view_trip_datetime">TIME:</string>
    <string name="view_trip_people">INVITED:</string>
    <string name="view_trip_given_id">TRIP ID GIVEN BY SERVER</string>
    <string name="check_status">CHECK STATUS</string>
    <string name="trip_status">TRIP STATUS</string>
    <string name="uncertain">uncertain..</string>

</resources>
