<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    android:background="@drawable/silver_back"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/create_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".CreateTripActivity" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_trip_page" />

        <EditText
            android:id="@+id/trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_trip_name" />

        <EditText
            android:id="@+id/trip_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_trip_destination"
            android:onClick="callGoogleMaps" />

        <EditText
            android:id="@+id/trip_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_trip_content" />

        <LinearLayout
            android:id="@+id/invite_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/add_contact"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:onClick="invite"
                android:text="@string/add_contact" />
        </LinearLayout>

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:calendarViewShown="false"
            android:scaleY="0.8" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleY="0.8" />

        <Button
            android:id="@+id/submit_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitTrip"
            android:text="@string/submit_trip" />
    </LinearLayout>

</ScrollView>