<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    android:background="@drawable/silver_back"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/view_trip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ViewTripActivity" >

        <TextView
            android:id="@+id/view_trip_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_trip_name" />

        <TextView
            android:id="@+id/view_trip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/view_trip_name_title"
            android:layout_below="@id/view_trip_name_title"
            android:text="@string/uncertain" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/view_trip_name"
            android:background="#666666"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" />

        <TextView
            android:id="@+id/view_trip_destination_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/view_trip_name_title"
            android:layout_below="@id/view_trip_name"
            android:text="@string/view_trip_destination" />

        <TextView
            android:id="@+id/view_trip_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/view_trip_name_title"
            android:layout_below="@id/view_trip_destination_title"
            android:text="@string/uncertain" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/view_trip_destination"
            android:background="#666666"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" />

        <TextView
            android:id="@+id/view_trip_content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/view_trip_name_title"
            android:layout_below="@id/view_trip_destination"
            android:text="@string/view_trip_content" />

        <TextView
            android:id="@+id/view_trip_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/view_trip_name_title"
            android:layout_below="@id/view_trip_content_title"
            android:text="@string/uncertain" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/view_trip_content"
            android:background="#666666"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" />

        <TextView
            android:id="@+id/view_trip_datetime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/view_trip_name_title"
            android:layout_below="@id/view_trip_content"
            android:text="@string/view_trip_datetime" />

        <TextView
            android:id="@+id/view_trip_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/view_trip_name_title"
            android:layout_below="@id/view_trip_datetime_title"
            android:text="@string/uncertain" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/view_trip_datetime"
            android:background="#666666"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" />

        <TextView
            android:id="@+id/view_trip_people_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/view_trip_name_title"
            android:layout_below="@id/view_trip_datetime"
            android:text="@string/view_trip_people" />

        <TextView
            android:id="@+id/view_trip_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/view_trip_name_title"
            android:layout_below="@id/view_trip_people_title"
            android:text="@string/uncertain" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/view_trip_people"
            android:background="#666666"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" />

        <TextView
            android:id="@+id/view_trip_given_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/view_trip_name_title"
            android:layout_below="@id/view_trip_people"
            android:text="@string/view_trip_given_id" />

        <TextView
            android:id="@+id/view_trip_given_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view_trip_name_title"
            android:layout_below="@id/view_trip_given_id_title"
            android:text="@string/uncertain" />

        <Button
            android:id="@+id/check_trip_status_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/view_trip_people"
            android:onClick="checkTripStatus"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text="@string/check_status" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/check_trip_status_button"
            android:background="#666666"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" />

        <TextView
            android:id="@+id/view_trip_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view_trip_name_title"
            android:layout_below="@+id/check_trip_status_button"
            android:text="@string/trip_status" />

        <LinearLayout
            android:id="@+id/status_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_trip_status_title"
            android:orientation="vertical" >
        </LinearLayout>
        
    </RelativeLayout>

</ScrollView>